--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.461.0",
-    "next": "15.0.3",
+    "next": "^15.1.2",
     "next-auth": "^5.0.0-beta.25",
     "pg": "^8.13.1",
     "react": "18.2.0",
@@ -37,6 +37,6 @@
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.7.2"
   }
 }
